--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<title>Merin catering Kurianad</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Merin catering Kurianad" />
-	<meta name="keywords" content="catering, Kottyam catering, best catering, food, taste, wedding reception" />
+	<meta name="keywords" content="catering, Kottyam catering, best catering, food, taste, wedding reception, kerala catering" />
 	<meta name="author" content="Robin Thomas" />
 
   <!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	 
 	DESIGNED & DEVELOPED by Robin Thomas
 		
 	Website: 		http://.../
@@ -78,7 +78,7 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row">
-							<h1 class="to-animate">MERIN</h1>
+							<h1 class="to-animate">MERIN GROUP</h1>
 							<h2 class="to-animate">Catering <span>&</span> Events<a href=" " target="_blank"> </a></h2>
 							<h3 class="to-animate"><span></span> <a href=" " target="_blank">Kurianad - Kuravilagad - Kottayam</a></h3>
 						</div>
