--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/img_4.jpeg)"></div>
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
-				<p class="to-animate"><span class="firstcharacter">M</span>erin caters has created to the personal expressions of clients with excellence amd flair for 20 years. Hard work and <br> dedication contributes to the sucess of MERIN. /n/n/n </p>
-				<p class="text-center to-animate"><a href="#" class="btn btn-primary btn-outline">Get in touch</a></p>
+				<p class="to-animate"><span class="firstcharacter">M</span>erin caters has created to the personal expressions of clients with excellence amd flair for 20 years. Hard work and dedication contributes to the sucess of MERIN. We not only offer menus, but ambience to fit your personal occasion. Every customer can decide the degree of our assistance. please continue through our website for specific options and samples of our proven events. </p>
+                                <p class="text-center to-animate"><a href="#" class="btn btn-primary btn-outline">Get in touch</a></p>
 			</div>
 		</div>
 
