--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
 				<p class="to-animate"><span class="firstcharacter">M</span>erin caters has created to the personal expressions of clients with excellence amd flair for 20 years. Hard work and dedication contributes to the sucess of MERIN. We not only offer menus, but ambience to fit your personal occasion. Every customer can decide the degree of our assistance. please continue through our website for specific options and samples of our proven events. </p>
-                                <p class="text-center to-animate"><a href="#" class="btn btn-primary btn-outline">Get in touch</a></p>
+                                <p class="text-center to-animate"><a href="#" classy primary btn-outline">Get in touch</a></p>
 			</div>
 		</div>
 
@@ -133,7 +133,7 @@
 							
 							<li>
 								<blockquote>
-									<p>&ldquo;Cooking is an art, but all art requires knowing something about the techniques and materials&rdquo;</p>
+									<p>&ldquo;It was a fantastic effort from Team Merin to handle the taste buds arround my sweet daughter's wedding on 11-01-2020. Thank you Merin for making our reception great&rdquo;</p>
 									<p class="quote-author">&mdash; Nathan Myhrvold</p>
 								</blockquote>
 							</li>
