--- a/index.html
+++ b/index.html
@@ -134,25 +134,25 @@
 							<li>
 								<blockquote>
 									<p>&ldquo;It was a fantastic effort from Team Merin to handle the taste buds arround my sweet daughter's wedding on 11-01-2020. Thank you Merin for making our reception great&rdquo;</p>
-									<p class="quote-author">&mdash; Nathan Myhrvold</p>
+									<p class="quote-author">&mdash; Adv joseph kandathil</p>
+								</blockquote>
+							</li
+							<li>
+								<blockquote>
+									<p>&ldquo;Yesterday ( 27.01.2020) in connection with my son's Wedding Reception, dinner was entrusted to Merin caters. The food served was very delicious and tasty. Most of the guests appreciated  the food served and were happy with the arrangements made in connection with the same.The bill was also very reasonable. I would definitely recommend them to my friends.&rdquo;</p>
+									<p class="quote-author">&mdash; Binu paul</p>
 								</blockquote>
 							</li>
 							<li>
 								<blockquote>
-									<p>&ldquo;Give a man food, and he can eat for a day. Give a man a job, and he can only eat for 30 minutes on break.&rdquo;</p>
-									<p class="quote-author">&mdash; Lev L. Spiro</p>
+									<p>&ldquo;I would  like to thank the whole team for all their efforts and especially Mr. Charley Mathew & Titus Mathew,  for helping us right from the planning to the execution phase of this event.&rdquo;</p>
+									<p class="quote-author">&mdash; Shan Kuriakose</p>
 								</blockquote>
 							</li>
 							<li>
 								<blockquote>
-									<p>&ldquo;Find something you’re passionate about and keep tremendously interested in it.&rdquo;</p>
-									<p class="quote-author">&mdash; Julia Child</p>
-								</blockquote>
-							</li>
-							<li>
-								<blockquote>
-									<p>&ldquo;Never work before breakfast; if you have to work before breakfast, eat your breakfast first.&rdquo;</p>
-									<p class="quote-author">&mdash; Josh Billings</p>
+									<p>&ldquo;I would also like to thank the whole team for all their efforts and especially Mr. Suresh Ramachandran,  for helping us right from the planning to the execution phase of this event;</p>
+									<p class="quote-author">&mdash; Rahul James</p>
 								</blockquote>
 							</li>
 							
