--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@
 								<i class="icon-home"></i>
 								5555 Love Paradise 56 New Clity 5655, <br>Excel Tower United Kingdom
 							</li>
-							<li><i class="icon-phone"></i> (123) 465-6789</li>
-							<li><i class="icon-envelope"></i>info@merincatering.com</li>
+							<li><i class="icon-phone"></i> 91+6238050139</li>
+							<li><i class="icon-envelope"></i>alencharley23@gmail.com</li>
 							<li><i class="icon-globe"></i> <a href="http://robinthomas.tk/" target="_blank">merincatering.in</a></li>
 						</ul>
 					</div>
@@ -640,7 +640,7 @@
 		<div class="container">
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
-					<p class="to-animate">&copy; 2016 Marian catering and events. <br> Kurianad - Kuravilagad - Kottayam <br> .....
+					<p class="to-animate">&copy; 2016 Merin group catering and events. <br> Kurianad - Kuravilagad - Kottayam <br> .....
 					</p>
 					<p class="text-center to-animate"><a href="#" class="js-gotop">Go To Top</a></p>
 				</div>
