--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 			  	<ul class="slides">
-			   	<li style="background-image: url(images/img_2.jpeg);" data-stellar-background-ratio="0.5"></li>
+			   	<li style="background-image: url(images/..................................jpeg);" data-stellar-background-ratio="0.5"></li>
 			   	<li style="background-image: url(images/img_3.jpeg);" data-stellar-background-ratio="0.5"></li>
 			   	<li style="background-image: url(images/3.jpg);" data-stellar-background-ratio="0.5"></li>
 			  	</ul>
