--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<div class="row">
 							<h1 class="to-animate">MERIN GROUP</h1>
 							<h2 class="to-animate">Catering <span>&</span> Events<a href=" " target="_blank"> </a></h2>
-							<h3 class="to-animate"><span></span> <a href=" " target="_blank">Kurianad - Kuravilagad - Kottayam</a></h3>
+							<h3 class="to-animate">Kurianad - Kuravilagad - Kottayam</h3>
 						</div>
 					</div>
 				</div>
